@@ -4,6 +4,7 @@ import.heading=Import
 qsp.button=Quelea Song Pack
 os.button=Opensong
 olp.button=OpenLP
+zw.button=ZionWorx
 sp.button=Sunday Plus
 ss.button=Survivor Songbook
 projector.heading=Projector
@@ -170,6 +171,8 @@ kingsway.import.line2=This will take a long time (potentially hours!), so please
 easyslides.import.line1=This will import songs from an EasySlides XML file.
 qsp.import.line1=Select the location of the Quelea songpack below.
 os.import.line1=Select the location of the Opensong database below.
+zw.import.line1=Select the location of the ZionWorx "MainTable.dat" file below.
+zw.import.line2=It can usually be found in "C:\\ProgramData\\ZionWorx\\2.6\\Data".
 olp.import.line1=Select the location of the OpenLP database below.
 sundayplus.import.line1=Select the location of the Sunday Plus database below.
 source.import.line1=Select the location of the ymns directory on the source CD.
@@ -373,6 +376,7 @@ filefilters.description.audio.files=Audio files
 filefilters.description.quelea.schedules=Quelea Schedules
 filefilters.description.powerpoint.presentations=Powerpoint Presentations
 filefilters.description.plain.text.song=Plain text song
+filefilters.description.maintable.dat=ZionWorx MainTable database file
 bible.search.results.found=results found
 bible.search.result.found=result found
 bible.search.keep.typing=Keep typing...
@@ -402,3 +406,5 @@ hover.for.position.label=Hover over the canvas to set text position
 test.patterns.text=Test Patterns
 test.patterns.explanation=The test patterns available here should help you calibrate your display's focus and colour settings properly. Click on a test image to show it on both the main and stage views.
 youtube.url.label=Youtube video URL
+no.tdb.heading=TurboDB Data Exchange not found
+no.tdb.message=For technical reasons, you need to download TurboDB data exchange (http://bit.ly/1gwoPLX) before Quelea can import ZionWorx databases.\nWhen you've downloaded it, extract the contents of the zip file to $1 and restart Quelea.\n\nIf you have any issues, then please feel free to ask on the discussion group here: (http://bit.ly/1mePoeh)
