@@ -2,5 +2,6 @@ quelea (2014.1) stable; urgency=normal
  
   * Added Youtube support
   * Add ability to import more than one presentation at a time
+  * Add ZionWorx import
 
- -- Michael Berry <michael@quelea.org>  Wednesday, 06 Feb 2014 00:00:00 +0000
+ -- Michael Berry <michael@quelea.org>  Wednesday, 14 Feb 2014 00:00:00 +0000
